Preparations for using ModelAccess in XWiki (#328)
* mock ModelAccess instead of strategy/XWiki/Store

* test fixes

* CelementsUserService#getUser(accountName)

* switch order for diff